# bedtools2

./: ._Makefile.uZs1Vt  ._README.89gPvU  .cproject  .gitignore  .project  .travis.yml  FAQ  LICENSE  Makefile  Makefile.am  README  README.md  README.rst  RELEASE_HISTORY  TODO  USAGE_EXAMPLES  a.bed  b.bed  configure.ac  gaps.mm9.bed  git-version-gen  hallUnpublishedCNVs.mm9.bed  libtyp  log  reqs.txt  requirements.txt  setup.py  tags  test  test.bed
docs/: Makefile  Makefile.am  bedtools.ai  build.sh  conf.py  index.rst  make.bat  requirements.txt  setup.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/content/: advanced-usage.doctree  annotateBed.doctree  bamToBed.doctree  bed12ToBed6.doctree  bedToBam.doctree  bedToIgv.doctree  bedtools-suite.doctree  closestBed.doctree  complementBed.doctree  coverageBed.doctree  example-usage.doctree  fastafromBed.doctree  general-usage.doctree  genomecoverageBed.doctree  groupBy.doctree  installation.doctree  intersectBed.doctree  linksBed.doctree  maskfastafromBed.doctree  mergeBed.doctree  overlap.doctree  overview.doctree  pairToBed.doctree  pairToPair.doctree  quick-start.doctree  shuffleBed.doctree  slopBed.doctree  sortBed.doctree  subtractBed.doctree  unionBedGraphs.doctree  windowBed.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.txt
docs/_build/html/_sources/content/: advanced-usage.txt  annotateBed.txt  bedToIgv.txt  bedtools-suite.txt  closestBed.txt  coverageBed.txt  groupBy.txt  intersectBed.txt  mergeBed.txt  overview.txt  sortBed.txt  subtractBed.txt  windowBed.txt
docs/_build/html/content/: advanced-usage.html  annotateBed.html  bamToBed.html  bed12ToBed6.html  bedToBam.html  bedToIgv.html  bedtools-suite.html  closestBed.html  complementBed.html  coverageBed.html  example-usage.html  fastafromBed.html  general-usage.html  genomecoverageBed.html  groupBy.html  installation.html  intersectBed-1.py  intersectBed-2.py  intersectBed-3.py  intersectBed.html  linksBed.html  maskfastafromBed.html  mergeBed.html  overlap.html  overview.html  pairToBed.html  pairToPair.html  quick-start.html  shuffleBed.html  slopBed.html  sortBed.html  subtractBed.html  unionBedGraphs.html  windowBed.html
docs/_build/latex/: bedtools.aux  bedtools.ilg  bedtools.out  bedtools.tex  bedtools.toc
docs/_build/man/: bedtools.1
docs/_static/: labibi.css  labibi.js
docs/_templates/: page.html
docs/content/: advanced-usage.rst  bamToBed.rst  bed12ToBed6.rst  bedToBam.rst  bedtools-suite.rst  complementBed.rst  example-usage.rst  faq.rst  fastafromBed.rst  general-usage.rst  genomecoverageBed.rst  groupby.rst  history.rst  installation.rst  intersect.rst  linksBed.rst  maskfastafromBed.rst  overlap.rst  overview.rst  pairToBed.rst  pairToPair.rst  quick-start.rst  related-tools.rst  shuffleBed.rst  slopBed.rst  tips-and-tricks.rst  unionBedGraphs.rst
docs/content/images/tool-glyphs/: jaccard-glyph.ai  random-glyph.ai  reldist-glyph.ai
docs/content/tools/: annotate.rst  bamtobed.rst  bamtofastq.rst  bed12tobed6.rst  bedpetobam.rst  bedtobam.rst  closest.rst  cluster.rst  complement.rst  coverage.rst  expand.rst  fisher.rst  flank.rst  genomecov.rst  getfasta.rst  groupby.rst  igv.rst  intersect.rst  jaccard.rst  links.rst  makewindows.rst  map.rst  maskfasta.rst  merge.rst  multicov.rst  multiinter.rst  nuc.rst  overlap.rst  pairedbamtobed12.rst  pairtobed.rst  pairtopair.rst  random.rst  reldist.rst  shift.rst  shuffle.rst  slop.rst  sort.rst  subtract.rst  summary.rst  tag.rst  (+2 more)
docs/superpowers/plans/: 2026-06-10-getfasta-nameKey.md
docs/superpowers/specs/: 2026-06-10-getfasta-nameKey-design.md
docs/templates/: page.html  sidebar-intro.html
docs/themes/rtd/static/: rtd.css_t
src/utils/BamTools/src/api/: BamAlgorithms.h  BamAlignment.cpp  BamAlignment.h  BamAux.h  BamConstants.h  BamMultiReader.cpp  BamMultiReader.h  BamReader.cpp  BamReader.h  BamWriter.cpp  BamWriter.h  CMakeLists.txt  IBamIODevice.h  SamConstants.h  SamHeader.cpp  SamHeader.h  SamProgram.cpp  SamProgram.h  SamProgramChain.cpp  (+8 more)
src/utils/htslib/: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  INSTALL  LICENSE  Makefile  NEWS  README.md  bcf_sr_sort.c  bcf_sr_sort.h  bgzf.c  bgzip.1  bgzip.c  config.mk.in  configure.ac  errmod.c  faidx.5  faidx.c  hfile.c  hfile_gcs.c  hfile_internal.h  hfile_libcurl.c  hfile_net.c  hfile_s3.c  hts.c  hts_internal.h  hts_os.c  htsfile.1  htsfile.c  htslib.mk  htslib.pc.in  htslib_vars.mk  kfunc.c  knetfile.c  kstring.c  md5.c  multipart.c  plugin.c  probaln.c  (+16 more)
src/utils/htslib/cram/: cram.h  cram_codecs.c  cram_codecs.h  cram_decode.c  cram_decode.h  cram_encode.c  cram_encode.h  cram_external.c  cram_index.c  cram_index.h  cram_io.c  cram_io.h  cram_samtools.c  cram_samtools.h  cram_stats.c  cram_structs.h  files.c  mFILE.c  mFILE.h  open_trace_file.c  open_trace_file.h  os.h  pooled_alloc.c  pooled_alloc.h  rANS_byte.h  rANS_static.c  rANS_static.h  sam_header.c  sam_header.h  string_alloc.c  string_alloc.h
src/utils/htslib/htslib/: bgzf.h  cram.h  faidx.h  hfile.h  hts.h  hts_defs.h  hts_endian.h  hts_log.h  hts_os.h  kbitset.h  kfunc.h  khash.h  knetfile.h  kseq.h  ksort.h  kstring.h  regidx.h  sam.h  synced_bcf_reader.h  tbx.h  thread_pool.h  vcf.h  vcf_sweep.h  vcfutils.h
src/utils/htslib/m4/: hts_prog_cc_warnings.m4
src/utils/htslib/os/: lzma_stub.h  rand.c
src/utils/htslib/test/: auxf#values.sam  auxf#values_java.cram  auxf.fa  auxf.fa.fai  bgziptest.txt  bgziptest.txt.gz.gzi  c1#bounds.sam  c1#clip.sam  c1#noseq.sam  c1#pad1.sam  c1#pad2.sam  c1#pad3.sam  c1#unknown.sam  c1.fa  c1.fa.fai  c2#pad.sam  c2.fa  c2.fa.fai  ce#1000.sam  ce#2.sam  ce#5.sam  ce#5b.sam  ce#5b_java.cram  ce#large_seq.sam  ce#supp.sam  ce#tag_depadded.sam  ce#tag_padded.sam  ce#unmap.sam  ce#unmap1.sam  ce#unmap2.sam  compare_sam.pl  cross_validate.sh  faidx.fa  fastqs.fq  fastqs_README.txt  fieldarith.c  fieldarith.sam  formatcols.vcf  formatmissing.vcf  hfile.c  (+60 more)
src/utils/htslib/win/: rand.c  rand.h
(+1296 files in other folders)
